--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+ <title>gaming-landing-page</title>
 </head>
 <body>
  <h1>hello world</h1>
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, perspiciatis.</p>
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, perspiciatis.</p>
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, perspiciatis.</p>
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, perspiciatis.</p>
 </body>
 </html>
