--- a/index.html
+++ b/index.html
@@ -4,12 +4,40 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>gaming-landing-page</title>
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+ <link rel="icon" type="image/x-icon" href="img/favicon.png">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+<script src="https://cdn.tailwindcss.com"></script>
+<style>
+ @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+ h1{
+  color: #0b02231a;
+
+
+ }
+ </style>
 </head>
 <body>
- <h1>hello world</h1>
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, perspiciatis.</p>
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, perspiciatis.</p>
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, perspiciatis.</p>
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, perspiciatis.</p>
+ <div class="navbar  bg-[#FFF] px-40 gap-6">
+  <div class="flex-1">
+    <figure>
+      <img src="img/Frame (3).png">
+    </figure>
+  </div>
+  <div class="flex-none gap-2">
+    <ul class="menu menu-horizontal px-1 ">
+      <li ><a href="#">About Us</a></li>
+      <li><a href="#">Developers</a></li>
+    </ul>
+  </div>
+  <button class="gap-4 py-2 px-6 rounded-lg bg-[#0b02231a] ">
+    <a >About Us</a></a>
+    <img src="img/tik-tok 2.png">
+    <img src="img/tik-tok 1.png">
+  </button>
+</div>
 </body>
 </html>
